--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2JCTK4E;Database=BlogCoreDB;User ID=sa;Password=12345678;Trusted_Connection=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-2JCTK4E;Database=TestBlogCoreDB2Ejemplo;User ID=sa;Password=12345678;Trusted_Connection=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
